--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -5,9 +5,7 @@ yaml = true
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-#dns-server = quic://x.passcloud.xyz:853,https://125099.alidns.com/dns-query,tls://dot.pub
-#dns-server = quic://i.passcloud.xyz,https://dns.google/dns-query,tls://1.1.1.1
-dns-server = 223.5.5.5,119.29.29.29
+dns-server = https://dns.google/dns-query,tls://1.1.1.1,tls://dns.google,https://cloudflare-dns.com/dns-query,
 update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Clash%20config/20220723Phone.conf
 
 [Proxy Group]
@@ -31,7 +29,6 @@ javauto = url-test,SSRCLOUD CNIX,use=true
 
 
 [Rule]
-DOMAIN-SUFFIX,music.desperadoj.com,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT#classical
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT#domain
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,🎵 网易云音乐#classical
@@ -63,10 +60,7 @@ IP-CIDR,203.205.236.0/24,DIRECT
 IP-CIDR,121.51.40.0/24,DIRECT
 IP-CIDR,101.91.92.0/24,DIRECT
 GEOIP,CN,DIRECT
-#DST-PORT,80,✈️PROXY
-#DST-PORT,443,✈️PROXY
-#DST-PORT,22,✈️PROXY
-FINAL,✈️PROXY
+FINAL,DIRECT
 
 [Host]
 localhost = 127.0.0.1
