--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -9,6 +9,7 @@ dns-server = 223.5.5.5,system,119.29.29.29
 update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Clash%20config/20220723Phone.conf
 
 [Proxy Group]
+🎵 网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
 main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港
