--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -9,7 +9,7 @@ dns-server = 223.5.5.5,system,119.29.29.29
 update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Clash%20config/20220723Phone.conf
 
 [Proxy Group]
-🎵 网易云音乐 = select,🎵 网易云音乐
+网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
 main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港
@@ -29,7 +29,7 @@ DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT#classical
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT#domain
 #RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,🎵 网易云音乐#classical
-RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Shadowrocket/UnblockNeteaseMusic.conf,🎵 网易云音乐#classical
+RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Shadowrocket/UnblockNeteaseMusic.conf,网易云音乐#classical
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT#classical
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,DIRECT#classical
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml,DIRECT#classical
