--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -31,7 +31,7 @@ DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT
-RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Shadowrocket/UnblockNeteaseMusic.conf,网易云音乐
+RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,网易云音乐
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml,DIRECT
