--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -29,6 +29,7 @@ DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 
 
 [Rule]
+DOMAIN,music.desperadoj.com,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Surge/RuleSet/NeteaseMusic.list,网易云音乐
