--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -6,7 +6,7 @@ bypass-system = true
 skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 #dns-server = 223.5.5.5,system,119.29.29.29
-dns-server = https://1.0.0.1/dns-query,https://101.101.101.101/dns-query,https://208.67.222.222/dns-query,https://8.8.8.8/dns-query,https://8.8.4.4/dns-query,
+dns-server = https://1.0.0.1/dns-query,https://101.101.101.101/dns-query,https://208.67.222.222/dns-query,https://8.8.8.8/dns-query,https://8.8.4.4/dns-query,https://1.1.1.1/dns-query
 update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Clash%20config/20220723Phone.conf
 
 [Proxy Group]
