update proxy provider url

--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -279,7 +279,7 @@ proxy-providers:
   
   Leon406/SubCrawler:      
     type: http
-    url:  "https://v1.mk/JwdjUcS"   
+    url:  "https://v1.mk/uEBT3u1"   
     interval: 3600
     path: ./Proxy/free2.yaml
     health-check:
@@ -430,7 +430,7 @@ proxy-groups:
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
-    filter: '香港|HK'
+    filter: '港'
    #lazy: true
    #disable-udp: true
 
