--- a/domestic.yaml
+++ b/domestic.yaml
@@ -48,5 +48,5 @@ payload:
   - DOMAIN-SUFFIX,akamaihd.net
 #steam discount
   - DOMAIN-SUFFIX,greenmangaming.com
-
+  - DOMAIN,static-eu.payments-amazon.com
 
