--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -430,7 +430,7 @@ proxy-groups:
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
-    filter: '港'
+    filter: '香港'
    #lazy: true
    #disable-udp: true
 
@@ -719,7 +719,8 @@ rule-providers:
     type: http
     behavior: classical
     path: ./RuleSet/Extra/Apple.yaml
-    url: "https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Apple.yaml"
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml"
+    #url: "https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Apple.yaml"
     interval: 86400
   
   bt-trackers:
@@ -731,8 +732,8 @@ rule-providers:
   
   Telegram:
     type: http
-    behavior: ipcidr
-    url: "https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt"
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
     path: ./ruleset/Telegram.yaml
     interval: 86400
   
@@ -750,12 +751,12 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Rockstar/Rockstar.yaml"
     interval: 86400
   
-  CDN:
-    type: http
-    behavior: classical
-    url: "https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/CDN.yaml"
-    path: ./ruleset/CDN.yaml
-    interval: 86400
+  #CDN:
+  #  type: http
+  #  behavior: classical
+  #  url: "https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/CDN.yaml"
+  #  path: ./ruleset/CDN.yaml
+  #  interval: 86400
 
 # 规则
 rules:
@@ -775,7 +776,6 @@ rules:
 
 #——————————————————————————————————————————OPENCLASH
   - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
-  - DOMAIN-SUFFIX,qbittorrent.org,✈️PROXY
   - DOMAIN-SUFFIX,awesome-hd.me,DIRECT
   - DOMAIN-SUFFIX,broadcasthe.net,DIRECT
   - DOMAIN-SUFFIX,chdbits.co,DIRECT
@@ -828,9 +828,6 @@ rules:
   - DOMAIN-KEYWORD,DMM,🇯🇵DMM/mgstage
   - DOMAIN-SUFFIX,mgstage.com,🇯🇵DMM/mgstage
   
-  # javdb
-  - DOMAIN-SUFFIX,javdb.com,✈️PROXY
-  
   # myrule
   - RULE-SET,Proxy,✈️PROXY
 
@@ -868,7 +865,7 @@ rules:
   - RULE-SET,Steam,✈️PROXY
  
   # Telegram
-  - RULE-SET,Telegram,✈️PROXY,no-resolve
+  - RULE-SET,Telegram,✈️PROXY
 
   #Epicgames
   - RULE-SET,Epicgames,DIRECT
@@ -885,7 +882,12 @@ rules:
 
   # (DNS Cache Pollution) / (IP Blackhole) / (Region-Restricted Access Denied) / (Network Jitter)
   - RULE-SET,Global,✈️PROXY
- 
+  
+#————————————————————————————————————————————————————————————————————cdn 
+  #- RULE-SET,CDN,🇹🇼TikTok/baha
+#————————————————————————————————————————————————————————————————————loyalsoldier  
+  - RULE-SET,🧱gfw,✈️PROXY
+#------------------------------------------------------------------------------------------------------------------神机规则
   # China Area Network
   - RULE-SET,China,DIRECT
 
@@ -910,10 +912,6 @@ rules:
 
   #- GeoIP China
   - GEOIP,CN,DIRECT
-#————————————————————————————————————————————————————————————————————cdn 
-  - RULE-SET,CDN,🇹🇼TikTok/baha
-#————————————————————————————————————————————————————————————————————loyalsoldier  
-  - RULE-SET,🧱gfw,✈️PROXY
 #————————————————————————————————————————————————————————————————————openclash
   - DST-PORT,80,DST-PORT
   - DST-PORT,443,DST-PORT
