--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -424,7 +424,7 @@ proxy-groups:
     type: url-test
     use:
      - SSRCLOUD CNIX
-    filter: 'IEPL|IPLC'
+    filter: '(IEPL|IPLC)''(香港|台湾|日本|新加坡)'
     url: 'http://github-debug.com/generate_204'
     interval: 900
     tolerance: 50 
