--- a/domestic.yaml
+++ b/domestic.yaml
@@ -50,3 +50,5 @@ payload:
   - DOMAIN-SUFFIX,greenmangaming.com
   - DOMAIN,static-eu.payments-amazon.com
   - DOMAIN,checkoutshopper-live.adyen.com
+  #gearbox
+  -DOMAIN-KEYWORD,gearboxsoftware
