--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -1,12 +1,33 @@
 # Shadowrocket: 2022-07-21 17:24:08
 [General]
+
+#added from https://github.com/deezertidal/shadowrocket-rules/blob/main/shadowrocket.conf
+
+# > All Hybrid 网络并发
+all-hybrid = true
+
+# > 测试超时（秒）
+test-timeout = 5
+
+# > 代理测速 URL
+proxy-test-url = http://www.gstatic.com/generate_204
+# > GeoIP数据库
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+
+# > DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29
+hijack-dns = https://dns.cloudflare.com/dns-query,https://doh.opendns.com/dns-query,https://dns.google/dns-query,
+# > 从 /etc/hosts 读取 DNS 记录
+read-etc-hosts = true
+#
+
 ipv6 = true
 yaml = true
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 #dns-server = 223.5.5.5,system,119.29.29.29
-dns-server = https://dns.cloudflare.com/dns-query,https://101.101.101.101/dns-query,https://doh.opendns.com/dns-query,https://dns.google/dns-query,
+#dns-server = https://dns.cloudflare.com/dns-query,https://doh.opendns.com/dns-query,https://dns.google/dns-query,
 update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Clash%20config/20220723Phone.conf
 
 [Proxy Group]
@@ -25,13 +46,10 @@ TikTok = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 
 
-
-
-
 [Rule]
 DOMAIN,music.desperadoj.com,✈️PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite.list,REJECT
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite_Domain.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Surge/RuleSet/NeteaseMusic.list,网易云音乐
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,DIRECT
