--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -12,7 +12,7 @@ test-timeout = 5
 # > 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 # > GeoIP数据库
-geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+geoip-maxmind-url = https://raw.githubusercontent.com/alecthw/mmdb_china_ip_list/release/lite/Country.mmdb
 
 # > 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
