--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -703,11 +703,9 @@ rules:
 
 #——————————————————————————————————————————OPENCLASH
   - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
-  - DOMAIN-SUFFIX,smtp,DIRECT
-  - DOMAIN-KEYWORD,announce,DIRECT
-  - DOMAIN-KEYWORD,torrent,DIRECT
+  # 去广告https://github.com/Loyalsoldier/v2ray-rules-dat
+  - GeoSite,category-ads-all,REJECT
   - RULE-SET,bt-trackers,DIRECT
-  - DOMAIN-KEYWORD,tracker,DIRECT
   
 #——————————————————————————————————————————神机规则
 
@@ -766,11 +764,10 @@ rules:
 
   # Steam Service
   - RULE-SET,SteamCN,DIRECT
-
   - RULE-SET,Steam,✈️PROXY
  
   # Telegram
-  - RULE-SET,Telegram,✈️PROXY,no-resolve
+  - GeoSite,Telegram,✈️PROXY
 
   #Epicgames
   - RULE-SET,Epicgames,DIRECT
@@ -793,12 +790,16 @@ rules:
 #————————————————————————————————————————————————————————————————————loyalsoldier  
   - RULE-SET,🧱gfw,✈️PROXY
 #------------------------------------------------------------------------------------------------------------------神机规则
+
   # China Area Network
   #- RULE-SET,China,DIRECT
-
   - GeoSite,CN,DIRECT
 
+  #telegram ip
+  - GEOIP,telegram,✈️PROXY,no-resolve
+
   # Local Area Network
+  - GEOIP,private,DIRECT,no-resolve
   - IP-CIDR,192.168.0.0/16,DIRECT
   - IP-CIDR,10.0.0.0/8,DIRECT
   - IP-CIDR,172.16.0.0/12,DIRECT
@@ -811,11 +812,11 @@ rules:
   #- RULE-SET,ChinaIP,DIRECT
 
   # Tencent
-  - IP-CIDR,119.28.28.28/32,DIRECT
-  - IP-CIDR,182.254.116.0/24,DIRECT
-  - IP-CIDR,203.205.236.0/24,DIRECT
-  - IP-CIDR,121.51.40.0/24,DIRECT
-  - IP-CIDR,101.91.92.0/24,DIRECT
+  #- IP-CIDR,119.28.28.28/32,DIRECT
+  #- IP-CIDR,182.254.116.0/24,DIRECT
+  #- IP-CIDR,203.205.236.0/24,DIRECT
+  #- IP-CIDR,121.51.40.0/24,DIRECT
+  #- IP-CIDR,101.91.92.0/24,DIRECT
 
   #- GeoIP China
   - GEOIP,CN,DIRECT
