--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -614,12 +614,12 @@ rule-providers:
     path: ./ruleset/gfw.yaml
     interval: 86400
   
-  #🧱greatfire:
-  #  type: http
-  #  behavior: domain
-  #  url: "https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/greatfire.txt"
-  #  path: ./ruleset/greatfire.yaml
-  #  interval: 86400
+  Telegram:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
+    path: ./ruleset/Telegram.yaml
+    interval: 86400
   
   BILIBILIHMT:
     type: http
@@ -702,7 +702,6 @@ rules:
   
 #——————————————————————————————————————————神机规则
 
-
   # Unbreak
   - RULE-SET,Unbreak,DIRECT
 
@@ -732,9 +731,6 @@ rules:
   
   #Tiktok
   - RULE-SET,TikTok,🇹🇼TikTok/baha 
-
-  # 外服游戏
-  - RULE-SET,🎮online game,🎮online game
   
   #禁止PS4/5下载更新
   - DOMAIN-SUFFIX,playstation.com,REJECT
@@ -760,7 +756,7 @@ rules:
   - RULE-SET,Steam,✈️PROXY
  
   # Telegram
-  - GeoSite,telegram,✈️PROXY
+  - RULE-SET,telegram,✈️PROXY,no-resolve
 
   #Epicgames
   - RULE-SET,Epicgames,DIRECT
@@ -775,9 +771,6 @@ rules:
   # (StreamingSE)
   - RULE-SET,StreamingSE,DIRECT
 
-  #telegram ip
-  - GEOIP,telegram,✈️PROXY,no-resolve
-
   # (DNS Cache Pollution) / (IP Blackhole) / (Region-Restricted Access Denied) / (Network Jitter)
   - RULE-SET,Global,✈️PROXY
   
@@ -786,6 +779,9 @@ rules:
 #————————————————————————————————————————————————————————————————————loyalsoldier  
   - RULE-SET,🧱gfw,✈️PROXY
 #------------------------------------------------------------------------------------------------------------------神机规则
+
+  # 外服游戏
+  - RULE-SET,🎮online game,🎮online game
 
   # China Area Network
   #- RULE-SET,China,DIRECT
