--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -670,13 +670,21 @@ rule-providers:
     path: ./RuleSet/Extra/Rockstar.yaml
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Rockstar/Rockstar.yaml"
     interval: 86400
+
+  Cloudflare:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/Cloudflare.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.yaml"
+    interval: 86400
   
-  #CDN:
-  #  type: http
-  #  behavior: classical
-  #  url: "https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/CDN.yaml"
-  #  path: ./ruleset/CDN.yaml
-  #  interval: 86400
+  CloudGlobal:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/CloudGlobal_Classical.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudGlobal/CloudGlobal_Classical.yaml"
+    interval: 86400
+  
 
 # 规则
 rules:
@@ -725,9 +733,13 @@ rules:
   
   # myrule
   - RULE-SET,Proxy,✈️PROXY
-
+  
   # domestic
   - RULE-SET,domestic,DIRECT
+
+  #CDN
+  - RULE-SET,Cloudflare,DIRECT
+  - RULE-SET,CloudGlobal,DIRECT
   
   #Tiktok
   - RULE-SET,TikTok,🇹🇼TikTok/baha 
