--- a/domestic.yaml
+++ b/domestic.yaml
@@ -58,3 +58,5 @@ payload:
   - DOMAIN,i.passcloud.xyz
   - DOMAIN,doh.opendns.com
   - DOMAIN,i.iqiqcloud.com
+  #unblockneteasemusic
+  - DOMAIN,music.163-my-beloved.com
