--- a/domestic.yaml
+++ b/domestic.yaml
@@ -53,10 +53,10 @@ payload:
   #gearbox
   - DOMAIN-KEYWORD,gearboxsoftware
   #dns
-  #- DOMAIN,dns.google
-  #- DOMAIN,dns.cloudflare.com
+  - DOMAIN,dns.google
+  - DOMAIN,dns.cloudflare.com
   #- DOMAIN,i.passcloud.xyz
-  #- DOMAIN,doh.opendns.com
+  - DOMAIN,doh.opendns.com
   #- DOMAIN,i.iqiqcloud.com
   #unblockneteasemusic
   #- DOMAIN,music.163-my-beloved.com
