Cloudflare,✈️PROXY #direct>proxy due to i/o timeout, steamcn v2ray problematic

--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -642,12 +642,12 @@ rule-providers:
   #  interval: 86400
 
   #Steam CN domain
-  #SteamCN:
-  #  type: http
-  #  behavior: classical
-  #  path: ./RuleSet/Extra/SteamCN.yaml
-  #  url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
-  #  interval: 86400
+  SteamCN:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/SteamCN.yaml
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
+    interval: 86400
 
   
   #myrule
@@ -781,7 +781,7 @@ rules:
     
     - Geosite,ehentai,e-hentai
 
-    - GeoSite,steam@CN,DIRECT  # if domain matching, mismatch results dismissing
+    - RULE-SET,SteamCN,DIRECT  # if domain matching, mismatch results dismissing
     - GeoSite,steam,✈️PROXY
     
     - Geosite,Telegram,✈️PROXY
