--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -539,19 +539,19 @@ rule-providers:
     path: ./ruleset/bt-trackers.yaml
     interval: 86400
   
-  Cloudflare:
-    type: http
-    behavior: classical
-    path: ./RuleSet/Extra/Cloudflare.yaml
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.yaml"
-    interval: 86400
+  #Cloudflare:
+  #  type: http
+  #  behavior: classical
+  #  path: ./RuleSet/Extra/Cloudflare.yaml
+  #  url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.yaml"
+  #  interval: 86400
   
-  CloudGlobal:
-    type: http
-    behavior: classical
-    path: ./RuleSet/Extra/CloudGlobal_Classical.yaml
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudGlobal/CloudGlobal_Classical.yaml"
-    interval: 86400
+   #CloudGlobal:
+   # type: http
+   # behavior: classical
+   # path: ./RuleSet/Extra/CloudGlobal_Classical.yaml
+   # url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudGlobal/CloudGlobal_Classical.yaml"
+   # interval: 86400
 
   DMM:
     type: http
@@ -688,9 +688,9 @@ rules:
     # final proxy  
     - RULE-SET,🧱gfw,✈️PROXY
     
-    - RULE-SET,Cloudflare,✈️PROXY #direct>proxy due to i/o timeout
+    #- RULE-SET,Cloudflare,✈️PROXY #direct>proxy due to i/o timeout
     
-    - RULE-SET,CloudGlobal,✈️PROXY #direct>proxy due to i/o timeout
+    #- RULE-SET,CloudGlobal,✈️PROXY #direct>proxy due to i/o timeout
 
     - RULE-SET,Proxy,✈️PROXY
 
