--- a/domestic.yaml
+++ b/domestic.yaml
@@ -62,3 +62,6 @@ payload:
   #- DOMAIN,i.iqiqcloud.com
   #unblockneteasemusic
   #- DOMAIN,music.163-my-beloved.com
+  
+  #DNS enquiry
+  - DOMAIN-SUFFIX,skk.moe
