--- a/domestic.yaml
+++ b/domestic.yaml
@@ -53,9 +53,9 @@ payload:
   #gearbox
   #- DOMAIN-KEYWORD,gearboxsoftware
   #dns
-  - DOMAIN-SUFFIX,dns.google
-  - DOMAIN-SUFFIX,1.1.1.1
-  - DOMAIN-SUFFIX,8.8.8.8
+  #- DOMAIN-SUFFIX,dns.google
+  #- DOMAIN-SUFFIX,1.1.1.1
+  #- DOMAIN-SUFFIX,8.8.8.8
   - DOMAIN-SUFFIX,dns.cloudflare.com
   #- DOMAIN,i.passcloud.xyz
   - DOMAIN-SUFFIX,doh.opendns.com
