--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -747,6 +747,9 @@ rules:
  
 
     # IP DIRECT
+    - IP-CIDR,1.0.0.1/15,DIRECT
+    - IP-CIDR,8.8.8.8/32,DIRECT
+
     - GEOIP,private,DIRECT,no-resolve
     - IP-CIDR,192.168.0.0/16,DIRECT
     - IP-CIDR,10.0.0.0/8,DIRECT
