--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -756,7 +756,8 @@ rules:
 
     # IP REJECT
     - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
-
+    # lan ip
+    - GEOIP,private,DIRECT,no-resolve
     # IP PROXY
     - RULE-SET,🎮online game,🎮online game,no-resolve #proxy group
 
@@ -772,7 +773,6 @@ rules:
     - IP-CIDR,1.0.0.1/15,DIRECT
     - IP-CIDR,8.8.8.8/32,DIRECT
 
-    - GEOIP,private,DIRECT,no-resolve
     - IP-CIDR,192.168.0.0/16,DIRECT
     - IP-CIDR,10.0.0.0/8,DIRECT
     - IP-CIDR,172.16.0.0/12,DIRECT
