--- a/domestic.yaml
+++ b/domestic.yaml
@@ -23,11 +23,8 @@ payload:
 #  - DOMAIN-SUFFIX,oce.leagueoflegends.com
 #  - DOMAIN-SUFFIX,store.leagueoflegends.com
 #  - DOMAIN,am-a.akamaihd.net
-#-------------------EPICGAME----------------------------------
-#  - DOMAIN-SUFFIX,epicgames.com
-#  - DOMAIN-SUFFIX,helpshift.com
-#  - DOMAIN-SUFFIX,paragon.com
-#  - DOMAIN-SUFFIX,unrealengine.com
+#-------------------qbittorrent----------------------------------
+  - DOMAIN-SUFFIX,qbittorrent.org
 #-------------------pyncmd---------------------------------- 
 #  - DOMAIN,pyncmd.vercel.app
 #-------------------不规则tracker---------------------------------- 
